fix:gap skills

--- a/css/skills.css
+++ b/css/skills.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 2rem;
 }
 .skills__title {
   width: 100%;
